--- a/web/package.json
+++ b/web/package.json
@@ -26,9 +26,11 @@
     "@graphql-codegen/typescript": "2.4.2",
     "@graphql-codegen/typescript-operations": "2.2.2",
     "@types/node": "17.0.5",
+    "@types/progressbar.js": "^1.1.2",
     "@types/react": "17.0.38",
     "eslint": "8.5.0",
     "eslint-config-next": "12.0.7",
+    "progressbar.js": "^1.1.0",
     "typescript": "4.5.4"
   }
 }
