--- a/web/package.json
+++ b/web/package.json
@@ -30,9 +30,11 @@
     "@types/node": "17.0.5",
     "@types/progressbar.js": "^1.1.2",
     "@types/react": "17.0.38",
+    "@types/uuid": "^8.3.4",
     "eslint": "8.5.0",
     "eslint-config-next": "12.0.7",
     "progressbar.js": "^1.1.0",
-    "typescript": "4.5.4"
+    "typescript": "4.5.4",
+    "uuid": "^8.3.2"
   }
 }
