--- a/web/package.json
+++ b/web/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "11",
     "@fontsource/merriweather": "^4.5.5",
     "@fontsource/montserrat": "^4.5.5",
+    "@fontsource/poppins": "^4.5.8",
     "@graphql-codegen/typescript-urql": "^3.4.2",
     "formik": "^2.2.9",
     "framer-motion": "5",
